# VL

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.py  build.sh  build_config.sh  clean.py  deps_config.sh  deps_scenario.sh  external_config.sh  index.html  pre_build.sh  test.cpp
JSONConverter/: .gitignore  CMakeLists.txt  JSONConverterConfig.h.in  VL  build.bat  build.py  build.sh  clean.py  clean_deps.py  deps_scenario.sh  external_config.sh  test.cpp  update_scripts.sh
JSONConverter/cmake_modules/: deps.cmake
JSONConverter/include/: JSONConverter.h  JSONDefs.h  JSONLoader.h  JSONWriter.h  Log.h  TypeResolver.h  Utils.h  rapidjson
JSONConverter/src/: JSONConverter.cpp  JSONLoader.cpp  JSONWriter.cpp  TypeResolver.cpp  Utils.cpp
doc/: .gitignore  doxyfile.txt  gen_doc.sh
docs/: collect_sources.sh
include/: Log.h  Observable.h  Observer.h  Templates.h  TypeResolver.h  Utils.h  VLDataInterface.h  VLNotifications.h  visitor.h  vl.h  vl_fwd.h  vl_visitor.h
include/vl/: var_interface.h  var_ptr.h
src/: Observable.cpp  Observer.cpp  TypeResolver.cpp  Utils.cpp  vl.cpp
src/vl/: var_ptr.cpp
